# langchain-study

./: .env  agent.py  doc.txt  docs.puml  langchain.ipynb  main.go  main.py  pyproject.toml
worker/: main.go
