[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.14",
    "langgraph>=0.4.7",
    "langsmith>=0.3.43",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


